<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco1"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutPrincipal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_capture_qr"
            android:contentDescription="@string/camara"
            android:onClick="capturar" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botonVerRegistros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_opcion"
            android:drawableTop="@drawable/ic_action_registro"
            android:onClick="verRegistros"
            android:text="@string/registros"
            android:textColor="@color/blanco1" />

        <Button
            android:id="@+id/botonVerActivos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_opcion"
            android:drawableTop="@drawable/ic_action_monitor"
            android:onClick="verActivos"
            android:text="@string/activos"
            android:textColor="@color/blanco1" />

        <Button
            android:id="@+id/botonVerAmbientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_opcion"
            android:drawableTop="@drawable/ic_action_hoja"
            android:onClick="verAmbientes"
            android:text="@string/ambientes"
            android:textColor="@color/blanco1" />
    </LinearLayout>

</LinearLayout>