<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/margen" >

                <TextView
                    android:id="@+id/textoNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/cajaNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ej_monitor_samsung" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textoTipo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinnerTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen"
                    android:layout_weight="1"
                    android:entries="@array/tipos" />

                <TextView
                    android:id="@+id/textoEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estado"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinnerEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen"
                    android:layout_weight="1"
                    android:entries="@array/estados" />

                <TextView
                    android:id="@+id/textoDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/cajaDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/caracteristicas_activo"
                    android:inputType="textMultiLine" >
                </EditText>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingLeft="@dimen/margen"
        android:paddingRight="@dimen/margen" >

        <Button
            android:id="@+id/botonAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margen"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:text="@android:string/ok"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/botonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margen"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:text="@android:string/cancel"
            android:textColor="@color/blanco" />

    </LinearLayout>

</LinearLayout>